--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,9 @@
 # 配置名称: clash/surge 订阅转换
-# 配置作者: wmsxwdsh
+# 配置作者: genwillen
 # 适用版本：多端通用
-# 更新时间: 2025-03-18
+# 更新时间: 2025-06-7
 
 [custom]
-# > wmsxwdsh Personal Rules：https://raw.githubusercontent.com/wmsxwdsh/ClashSub/main/wmsxwdsh20230715.ini
-# > blackmatrix7 Clash Rules：https://github.com/blackmatrix7/ios_rule_script/tree/master/rule/Clash
-# > ACL4SSR Clash Config：https://github.com/ACL4SSR/ACL4SSR/tree/master/Clash/config
-
 ; exclude_remarks=(距离|重置|过期|到期|剩余|GB|Traffic|Expire)
 
 # 五大区 + 澳门
