--- a/config.ini
+++ b/config.ini
@@ -208,17 +208,12 @@ ruleset=🛑 Ad blocking,https://raw.githubusercontent.com/blackmatrix7/ios_rule
 # direct
 ruleset=🔗 Global direct connection,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Lan/Lan.list
 ruleset=🔗 Global direct connection,https://raw.githubusercontent.com/wmsxwdsh/ClashSub/main/customRule/AddDirect.list
-ruleset=🔗 Global direct connection,https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/applications.txt
 ruleset=🔗 Global direct connection,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Other/China.list
 ruleset=🔗 Global direct connection,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Tencent.list
 
-# gfw
-ruleset=🌎 Proxy,https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/gfw.txt
-
 ruleset=🎵 Spotify,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Spotify.list
 ruleset=Ⓜ️ Google,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
-ruleset=Ⓜ️ Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleVoice/GoogleVoice.yaml
-ruleset=💬 Facebook,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Whatsapp/Whatsapp.yaml
+ruleset=💬 Facebook,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Whatsapp.list
 ruleset=💬 Facebook,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Instagram.list
 ruleset=💬 Facebook,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/source/rule/Facebook/Facebook.list
 ruleset=🍎 Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
