--- a/clash_config.ini
+++ b/clash_config.ini
@@ -257,6 +257,7 @@ custom_proxy_group=Microsoft`select`[]DIRECT`[]🌎 Proxy
 custom_proxy_group=📽 Netflix`select`[]🇸🇬 Singapore`[]🇹🇼 TaiWan`[]🚀 Delay optimization`[]🌎 Proxy
 custom_proxy_group=🤖 ChatGPT`select`[]🇺🇸 America`[]🇸🇬 Singapore`[]🇯🇵 Japan`[]🌎 Proxy
 custom_proxy_group=🕹 Steam`select`[]DIRECT`[]🚀 Delay optimization`(游戏|GAME|Game)`[]🇭🇰 HongKong`[]🌎 Proxy
+custom_proxy_group=🔗 Global direct connection`select`[]DIRECT`[]REJECT
 custom_proxy_group=🛑 Ad blocking`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 Final`select`[]🚀 Delay optimization`[]DIRECT`[]🇺🇸 America
 
