--- a/config_clash.ini
+++ b/config_clash.ini
@@ -208,6 +208,8 @@ ruleset=🛑 Ad blocking,https://raw.githubusercontent.com/blackmatrix7/ios_rule
 # direct
 ruleset=🔗 Global direct connection,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Lan/Lan.list
 ruleset=🔗 Global direct connection,https://raw.githubusercontent.com/wmsxwdsh/ClashSub/main/customRule/AddDirect.list
+ruleset=🔗 Global direct connection,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AppleMail/AppleMail.yaml
+ruleset=🔗 Global direct connection,https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/gfw.txt
 ruleset=🔗 Global direct connection,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Tencent.list
 
 ruleset=🎵 Spotify,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Spotify.list
@@ -243,19 +245,19 @@ custom_proxy_group=🌐 PROXY`select`[]🇺🇸 America`[]🌎 All`[]🇭🇰 Ho
 custom_proxy_group=🌎 All`select`^(?!.*(all))
 custom_proxy_group=🚀 Delay optimization`url-test`.*`http://www.gstatic.com/generate_204`300,,100
 
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong`🌎 All
+custom_proxy_group=🍎 Apple`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong`🌎 All`[]DIRECT
 custom_proxy_group=🎵 Spotify`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong`🌎 All
 custom_proxy_group=💬 Facebook`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong`🌎 All
 custom_proxy_group=Ⓜ️ Google`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong`🌎 All
 custom_proxy_group=📼 Youtube`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong`[]🚀 Delay optimization`🌎 All
 custom_proxy_group=Microsoft`select`[]DIRECT`[]🌐 PROXY`🌎 All
-custom_proxy_group=📽 Netflix`select`[]🇸🇬 Singapore`[]🇹🇼 TaiWan`[]🚀 Delay optimization`[]🌐 PROXY`🌎 All
-custom_proxy_group=🤖 ChatGPT`select`[]🇺🇸 America`[]🇸🇬 Singapore`[]🇯🇵 Japan`[]🌐 PROXY`🌎 All
-custom_proxy_group=🕹 Steam`select`[]DIRECT`[]🚀 Delay optimization`(游戏|GAME|Game)`[]🇭🇰 HongKong`[]🌐 PROXY`🌎 All
+custom_proxy_group=📽 Netflix`select`[]🇭🇰 HongKong`[]🇸🇬 Singapore`[]🇹🇼 TaiWan`[]🚀 Delay optimization`[]🌐 PROXY`🌎 All
+custom_proxy_group=🤖 ChatGPT`select`[]🇯🇵 Japan`[]🇺🇸 America`[]🇸🇬 Singapore`[]🌐 PROXY`🌎 All
+custom_proxy_group=🕹 Steam`select`[]🇭🇰 HongKong`[]DIRECT`[]🚀 Delay optimization`(游戏|GAME|Game)`[]🌐 PROXY`🌎 All
 
-custom_proxy_group=🇭🇰 HongKong`select`(香港|HK|HKG|Hong Kong)
-custom_proxy_group=🇹🇼 TaiWan`select`(台湾|TW|TWN|Taiwan)
-custom_proxy_group=🇸🇬 Singapore`select`(新加坡|狮城|SG|SGP|Singapore)
+custom_proxy_group=🇭🇰 HongKong`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 TaiWan`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 Singapore`url-test`🇸🇬(?!.*(?!🇨🇳)[🇦-🇿]{2})`https://i.ytimg.com/generate_204`30,,50
 custom_proxy_group=🇯🇵 Japan`select`(日本|JP|JPN|Japan)
 custom_proxy_group=🇺🇸 America`select`(美国|US|USA|United States)
 custom_proxy_group=🔗 Global direct connection`select`[]DIRECT`[]REJECT
