--- a/config_clash.ini
+++ b/config_clash.ini
@@ -262,7 +262,7 @@ custom_proxy_group=🇯🇵 Japan`select`(日本|JP|JPN|Japan)
 custom_proxy_group=🇺🇸 America`select`(美国|US|USA|United States)
 custom_proxy_group=🔗 Global direct connection`select`[]DIRECT`[]REJECT
 custom_proxy_group=🛑 Ad blocking`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 Final`select`[]🚀 Delay optimization`[]DIRECT`[]🇺🇸 America`🌎 All
+custom_proxy_group=🐟 Final`select`[]🇺🇸 America`[]🚀 Delay optimization`[]DIRECT`🌎 All
 
 ;设置分组标志位
 enable_rule_generator=true
