--- a/config.ini
+++ b/config.ini
@@ -229,6 +229,7 @@ ruleset=📽 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 ruleset=📽 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
 ruleset=🤖 ChatGPT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=🇺🇸 America,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/TikTok.list
+ruleset=⚾️ Bilibili,https://whatshub.top/rule/BiliBili.list
 
 ruleset=🕹 Steam,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
 ruleset=🕹 Steam,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Epic.list
@@ -254,6 +255,7 @@ custom_proxy_group=Microsoft`select`[]DIRECT`[]🌐 PROXY`🌎 All
 custom_proxy_group=📽 Netflix`select`[]🇭🇰 HongKong`[]🇸🇬 Singapore`[]🇹🇼 TaiWan`[]🚀 Delay optimization`[]🌐 PROXY`🌎 All
 custom_proxy_group=🤖 ChatGPT`select`[]🇯🇵 Japan`[]🇺🇸 America`[]🇸🇬 Singapore`[]🌐 PROXY`🌎 All
 custom_proxy_group=🕹 Steam`select`[]🇭🇰 HongKong`[]DIRECT`[]🚀 Delay optimization`(游戏|GAME|Game)`[]🌐 PROXY`🌎 All
+custom_proxy_group=⚾️ Bilibili`select`[]🇭🇰 HongKong`🇹🇼 TaiWan`DIRECT`[]🚀 Delay optimization`🌎 All
 
 custom_proxy_group=🇭🇰 HongKong`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 TaiWan`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
