--- a/config.ini
+++ b/config.ini
@@ -246,16 +246,16 @@ custom_proxy_group=🌐 PROXY`select`[]🇺🇸 America`[]🌎 All`[]🇭🇰 Ho
 custom_proxy_group=🌎 All`select`^(?!.*(all))
 custom_proxy_group=🚀 Delay optimization`url-test`.*`http://www.gstatic.com/generate_204`300,,100
 
-custom_proxy_group=🍎 Apple`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong`🌎 All`[]DIRECT
-custom_proxy_group=🎵 Spotify`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong`🌎 All
-custom_proxy_group=💬 Facebook`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong`🌎 All
-custom_proxy_group=Ⓜ️ Google`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong`🌎 All
-custom_proxy_group=📼 Youtube`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong`[]🚀 Delay optimization`🌎 All
-custom_proxy_group=Microsoft`select`[]DIRECT`[]🌐 PROXY`🌎 All
-custom_proxy_group=📽 Netflix`select`[]🇭🇰 HongKong`[]🇸🇬 Singapore`[]🇹🇼 TaiWan`[]🚀 Delay optimization`[]🌐 PROXY`🌎 All
-custom_proxy_group=🤖 ChatGPT`select`[]🇯🇵 Japan`[]🇺🇸 America`[]🇸🇬 Singapore`[]🌐 PROXY`🌎 All
-custom_proxy_group=🕹 Steam`select`[]🇭🇰 HongKong`[]DIRECT`[]🚀 Delay optimization`(游戏|GAME|Game)`[]🌐 PROXY`🌎 All
-custom_proxy_group=⚾️ Bilibili`select`[]🇭🇰 HongKong`🇹🇼 TaiWan`DIRECT`[]🚀 Delay optimization`🌎 All
+custom_proxy_group=🍎 Apple`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong`[]🌎 All`[]DIRECT
+custom_proxy_group=🎵 Spotify`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong`[]🌎 All
+custom_proxy_group=💬 Facebook`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong`[]🌎 All
+custom_proxy_group=Ⓜ️ Google`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong`[]🌎 All
+custom_proxy_group=📼 Youtube`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong`[]🚀 Delay optimization`[]🌎 All
+custom_proxy_group=Microsoft`select`[]DIRECT`[]🌐 PROXY`[]🌎 All
+custom_proxy_group=📽 Netflix`select`[]🇭🇰 HongKong`[]🇸🇬 Singapore`[]🇹🇼 TaiWan`[]🚀 Delay optimization`[]🌐 PROXY`[]🌎 All
+custom_proxy_group=🤖 ChatGPT`select`[]🇯🇵 Japan`[]🇺🇸 America`[]🇸🇬 Singapore`[]🌐 PROXY`[]🌎 All
+custom_proxy_group=🕹 Steam`select`[]🇭🇰 HongKong`[]DIRECT`[]🚀 Delay optimization`(游戏|GAME|Game)`[]🌐 PROXY`[]🌎 All
+custom_proxy_group=⚾️ Bilibili`select`[]🇭🇰 HongKong`[]🇹🇼 TaiWan`[]DIRECT`[]🚀 Delay optimization`[]🌎 All
 
 custom_proxy_group=🇭🇰 HongKong`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 TaiWan`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
