--- a/config.ini
+++ b/config.ini
@@ -218,17 +218,17 @@ ruleset=💬 Facebook,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/C
 ruleset=💬 Facebook,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Instagram.list
 ruleset=💬 Facebook,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/source/rule/Facebook/Facebook.list
 ruleset=🍎 Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
-ruleset=Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
-ruleset=🚀 Delay optimization,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
+ruleset=✉️Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
+ruleset=⚖️load-balance,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=🇭🇰 HongKong,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Wikipedia/Wikipedia.list
 ruleset=📼 Youtube,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
-ruleset=🚀 Delay optimization,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
-ruleset=🇺🇸 America,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Jetbrains/Jetbrains.list
+ruleset=⚖️load-balance,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
+ruleset=⚖️load-balance,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Jetbrains/Jetbrains.list
 
 ruleset=📽 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=📽 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
 ruleset=🤖 ChatGPT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
-ruleset=🇺🇸 America,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/TikTok.list
+ruleset=⚖️load-balance,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/TikTok.list
 ruleset=⚾️ Bilibili,https://whatshub.top/rule/BiliBili.list
 
 ruleset=🕹 Steam,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
@@ -243,19 +243,19 @@ ruleset=🐟 Final,[]FINAL
 
 # 这个比较全面
 custom_proxy_group=🌐 PROXY`select`[]🇺🇸 America`[]🌎 All`[]🇭🇰 HongKong`🇸🇬 Singapore`🇯🇵 Japan`🇹🇼 TaiWan`
-custom_proxy_group=🌎 All`select`^(?!.*(all))
+custom_proxy_group=⚖️load-balance`load-balance`.*`http://www.gstatic.com/generate_204`300,,100
 custom_proxy_group=🚀 Delay optimization`url-test`.*`http://www.gstatic.com/generate_204`300,,100
 
-custom_proxy_group=🍎 Apple`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong`[]🌎 All`[]DIRECT
-custom_proxy_group=🎵 Spotify`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong`[]🌎 All
-custom_proxy_group=💬 Facebook`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong`[]🌎 All
-custom_proxy_group=Ⓜ️ Google`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong`[]🌎 All
-custom_proxy_group=📼 Youtube`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong`[]🚀 Delay optimization`[]🌎 All
-custom_proxy_group=Microsoft`select`[]DIRECT`[]🌐 PROXY`[]🌎 All
-custom_proxy_group=📽 Netflix`select`[]🇭🇰 HongKong`[]🇸🇬 Singapore`[]🇹🇼 TaiWan`[]🚀 Delay optimization`[]🌐 PROXY`[]🌎 All
-custom_proxy_group=🤖 ChatGPT`select`[]🇯🇵 Japan`[]🇺🇸 America`[]🇸🇬 Singapore`[]🌐 PROXY`[]🌎 All
-custom_proxy_group=🕹 Steam`select`[]🇭🇰 HongKong`[]DIRECT`[]🚀 Delay optimization`(游戏|GAME|Game)`[]🌐 PROXY`[]🌎 All
-custom_proxy_group=⚾️ Bilibili`select`[]🇭🇰 HongKong`[]🇹🇼 TaiWan`[]DIRECT`[]🚀 Delay optimization`[]🌎 All
+custom_proxy_group=🍎 Apple`select`[]🇺🇸 America`[]⚖️load-balance`[]DIRECT
+custom_proxy_group=🎵 Spotify`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong
+custom_proxy_group=💬 Facebook`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong
+custom_proxy_group=Ⓜ️ Google`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong
+custom_proxy_group=📼 Youtube`select`[]⚖️load-balance`[]🚀 Delay optimization
+custom_proxy_group=✉️Microsoft`select`[]⚖️load-balance`[]DIRECT`[]🌐 PROXY`[]🌎 All
+custom_proxy_group=📽 Netflix`select`[]🇭🇰 HongKong`[]🇸🇬 Singapore`[]🇹🇼 TaiWan`[]🚀 Delay optimization
+custom_proxy_group=🤖 ChatGPT`select`[]🇯🇵 Japan`[]🇺🇸 America`[]🇸🇬 Singapore`[]🌐 PROXY`[]⚖️load-balance
+custom_proxy_group=🕹 Steam`select`[]🇭🇰 HongKong`[]DIRECT`[]🚀 Delay optimization`(游戏|GAME|Game)`[]🌐 PROXY
+custom_proxy_group=⚾️ Bilibili`select`[]🇭🇰 HongKong`[]🇹🇼 TaiWan`[]DIRECT`[]🚀 Delay optimization
 
 custom_proxy_group=🇭🇰 HongKong`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 TaiWan`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
@@ -264,7 +264,7 @@ custom_proxy_group=🇯🇵 Japan`select`(日本|JP|JPN|Japan)
 custom_proxy_group=🇺🇸 America`select`(美国|US|USA|United States)
 custom_proxy_group=🔗 Global direct connection`select`[]DIRECT`[]REJECT
 custom_proxy_group=🛑 Ad blocking`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 Final`select`[]🇺🇸 America`[]🚀 Delay optimization`[]DIRECT`🌎 All
+custom_proxy_group=🐟 Final`select`[]🇺🇸 America`[]🚀 Delay optimization`[]DIRECT
 
 ;设置分组标志位
 enable_rule_generator=true
