--- a/config.ini
+++ b/config.ini
@@ -260,8 +260,8 @@ custom_proxy_group=⚾️ Bilibili`select`[]🇭🇰 HongKong`[]🇹🇼 TaiWan`
 custom_proxy_group=🇭🇰 HongKong`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 TaiWan`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 Singapore`url-test`🇸🇬(?!.*(?!🇨🇳)[🇦-🇿]{2})`https://i.ytimg.com/generate_204`30,,50
-custom_proxy_group=🇯🇵 Japan`select`(日本|JP|JPN|Japan)
-custom_proxy_group=🇺🇸 America`select`(美国|US|USA|United States)
+custom_proxy_group=🇯🇵 Japan`url-test`(日本|JP|JPN|Japan)
+custom_proxy_group=🇺🇸 America`url-test`(美国|US|USA|United States)
 custom_proxy_group=🔗 Global direct connection`select`[]DIRECT`[]REJECT
 custom_proxy_group=🛑 Ad blocking`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 Final`select`[]🇺🇸 America`[]🚀 Delay optimization`[]DIRECT
