--- a/surge.conf
+++ b/surge.conf
@@ -65,7 +65,7 @@ encrypted-dns-skip-cert-verification = false  # 是否跳过加密 DNS 的证书
 🇭🇰HongKong = url-test, policy-path = https://sub.store/download/%E7%BA%A2%E6%9D%8F%E4%BA%91?target=SurgeMac, update-interval = 86400, policy-regex-filter = (🇭🇰)|(港)|(Hong)|(HK)
 🇹🇼Taiwan = url-test, policy-path = https://sub.store/download/%E7%BA%A2%E6%9D%8F%E4%BA%91?target=SurgeMac, update-interval = 86400, policy-regex-filter = (🇼🇸)|(台)|(Tai)|(TW)
 🇯🇵Japan = url-test, policy-path = https://sub.store/download/%E7%BA%A2%E6%9D%8F%E4%BA%91?target=SurgeMac, update-interval = 86400, policy-regex-filter = (🇯🇵)|(日)|(Japan)|(JP)
-🇺🇸America = url-test, policy-path = https://sub.store/download/%E7%BA%A2%E6%9D%8F%E4%BA%91?target=SurgeMac, update-interval = 86400, policy-regex-filter = (🇺🇸)|(美)|(States)|(US)
+🇺🇸America = select, policy-path = https://sub.store/download/%E7%BA%A2%E6%9D%8F%E4%BA%91?target=SurgeMac, update-interval = 86400, policy-regex-filter = (🇺🇸)|(美)|(States)|(US)
 🇬🇧England = url-test, policy-path = https://sub.store/download/%E7%BA%A2%E6%9D%8F%E4%BA%91?target=SurgeMac, update-interval = 86400, policy-regex-filter = (🇬🇧)|(英)|(Kingdom)|(UK)
 🇸🇬 Singapore = url-test, policy-path = https://sub.store/download/%E7%BA%A2%E6%9D%8F%E4%BA%91?target=SurgeMac, update-interval = 86400, policy-regex-filter = (🇸🇬)|(新)|(Singapore)|(SG)
 
@@ -73,14 +73,14 @@ encrypted-dns-skip-cert-verification = false  # 是否跳过加密 DNS 的证书
 📹 YouTube = select, ♻️ Auto, 🌐 Node Selection, 🇭🇰HongKong, 🇹🇼Taiwan, 🇯🇵Japan, 🇬🇧England, 🇸🇬 Singapore
 🎬 BiliBili = select, 🇭🇰HongKong, 🌐 Node Selection, 🇹🇼Taiwan, 🇯🇵Japan, 🇺🇸America, 🇸🇬 Singapore
 # 服务专用策略组
-Ⓜ️Google = select, 🇺🇸America, 🌐 Node Selection
+Ⓜ️ Google = select, 🇺🇸America, 🌐 Node Selection
 🍎 Apple = select, 🇺🇸America, 🌐 Node Selection, 🇭🇰HongKong, DIRECT
 🛜 OpenAI = select, 🇯🇵Japan, 🌐 Node Selection, 🇭🇰HongKong, 🇹🇼Taiwan, 🇸🇬 Singapore
 💬 Facebook = select, 🇺🇸America, 🌐 Node Selection, 🇭🇰HongKong, 🇹🇼Taiwan
 🎮 Steam = select, 🇭🇰HongKong,  🌐 Node Selection, 🇹🇼Taiwan, 🇯🇵Japan, 🇺🇸America, 🇸🇬 Singapore, DIRECT
 🔍 Microsoft = select, ⚖️ Load Balance, 🇭🇰HongKong
 
-⚖️ Load Balance = load-balance, policy-path = https://sub.store/download/红某云?target=SurgeMac, url = http://www.gstatic.com/generate_204, interval = 300, tolerance = 100
+⚖️ Load Balance = load-balance, policy-path = https://sub.store/download/%E7%BA%A2%E6%9D%8F%E4%BA%91?target=SurgeMac, url = http://www.gstatic.com/generate_204, interval = 300, tolerance = 100
 # 基础策略组，定义全局连接和广告屏蔽
 🛑 Ad blocking = select, REJECT
 
@@ -101,11 +101,11 @@ RULE-SET, https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.l
 RULE-SET, https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list, 🛑 Ad blocking, update-interval = 86400
 
 # google
-RULE-SET, https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GoogleVoice/GoogleVoice.list, Ⓜ️Google, update-interval = 86400
-RULE-SET, https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GoogleFCM/GoogleFCM.list, Ⓜ️Google, update-interval = 86400
-RULE-SET, https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Google/Google.list, Ⓜ️Google, update-interval = 86400
-RULE-SET, https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list, Ⓜ️Google, update-interval = 86400
-RULE-SET, https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GoogleSearch/GoogleSearch.list, Ⓜ️Google, update-interval = 86400
+RULE-SET, https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GoogleVoice/GoogleVoice.list, Ⓜ️ Google, update-interval = 86400
+RULE-SET, https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GoogleFCM/GoogleFCM.list, Ⓜ️ Google, update-interval = 86400
+RULE-SET, https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Google/Google.list, Ⓜ️ Google, update-interval = 86400
+RULE-SET, https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list, Ⓜ️ Google, update-interval = 86400
+RULE-SET, https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GoogleSearch/GoogleSearch.list, Ⓜ️ Google, update-interval = 86400
 
 # Steam
 RULE-SET, https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/SteamCN/SteamCN.list, DIRECT, update-interval = 86400
@@ -163,7 +163,6 @@ FINAL, 🇺🇸America
 
 
 [MITM]
-
 
 [Script]
 iQIYI.js = script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js,type=http-request,pattern=https?:\/\/.*\.iqiyi\.com\/.*authcookie=
