--- a/config.ini
+++ b/config.ini
@@ -274,7 +274,7 @@ ruleset=🇺🇸 America,[]FINAL
 
 # 这个比较全面
 custom_proxy_group=🌐 PROXY`select`[]🇺🇸 America`[]🇭🇰 HongKong`🇸🇬 Singapore`🇯🇵 Japan`🇹🇼 TaiWan
-custom_proxy_group=⚖️ load-balance`load-balance`.*`http://www.gstatic.com/generate_204`300,,100
+custom_proxy_group=⚖️ Load Balance`load-balance`.*`http://www.gstatic.com/generate_204`300,,100
 custom_proxy_group=🚀 Delay optimization`url-test`.*`http://www.gstatic.com/generate_204`300,,100
 
 custom_proxy_group=🍎 Apple`select`[]🇺🇸 America`[]⚖️ load-balance`[]DIRECT
