--- a/clash.ini
+++ b/clash.ini
@@ -202,58 +202,89 @@ emoji=(南极|Antarctica),🇦🇶
 # 2024-10-15，ruleset 的 “,” 之间不能有空格，Surge 识别不出来
 
 # reject
-ruleset=🛑 Ad blocking,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/BanAD.list
-ruleset=🛑 Ad blocking,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Adobe/Adobe.list
+# 🛑 Ad blocking
+ruleset=🛑 Ad blocking,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+ruleset=🛑 Ad blocking,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 
-# direct
-ruleset=🔗 Global direct connection,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Lan/Lan.list
-ruleset=🔗 Global direct connection,https://raw.githubusercontent.com/wmsxwdsh/ClashSub/main/customRule/AddDirect.list
-ruleset=🔗 Global direct connection,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AppleMail/AppleMail.yaml
-ruleset=🔗 Global direct connection,https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/gfw.txt
-ruleset=🔗 Global direct connection,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Tencent.list
+# Ⓜ️ Google
+ruleset=Ⓜ️ Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GoogleVoice/GoogleVoice.list
+ruleset=Ⓜ️ Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GoogleFCM/GoogleFCM.list
+ruleset=Ⓜ️ Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Google/Google.list
+ruleset=Ⓜ️ Google,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
+ruleset=Ⓜ️ Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GoogleSearch/GoogleSearch.list
 
-ruleset=🎵 Spotify,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Spotify.list
-ruleset=Ⓜ️ Google,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
-ruleset=💬 Facebook,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Whatsapp.list
-ruleset=💬 Facebook,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Instagram.list
-ruleset=💬 Facebook,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/source/rule/Facebook/Facebook.list
-ruleset=🍎 Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
-ruleset=✉️Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
-ruleset=⚖️load-balance,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
-ruleset=🇭🇰 HongKong,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Wikipedia/Wikipedia.list
-ruleset=📼 Youtube,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
-ruleset=⚖️load-balance,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
-ruleset=⚖️load-balance,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Jetbrains/Jetbrains.list
+# 💬 Facebook
+ruleset=💬 Facebook,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Facebook/Facebook.list
+ruleset=💬 Facebook,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Instagram/Instagram.list
+ruleset=💬 Facebook,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Whatsapp/Whatsapp.list
 
-ruleset=📽 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
-ruleset=📽 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
-ruleset=🤖 ChatGPT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
-ruleset=⚖️load-balance,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/TikTok.list
-ruleset=⚾️ Bilibili,https://whatshub.top/rule/BiliBili.list
+# ⚖️ Load Balance
+ruleset=⚖️ Load Balance,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Telegram/Telegram.list
+ruleset=⚖️ Load Balance,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Jetbrains/Jetbrains.list
+ruleset=⚖️ Load Balance,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GitHub/GitHub.list
 
-ruleset=🕹 Steam,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
-ruleset=🕹 Steam,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Epic.list
+# 🍎 Apple
+ruleset=🍎 Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple.list
+ruleset=🍎 Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/AppleProxy/AppleProxy.list
+ruleset=🍎 Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/AppleMusic/AppleMusic.list
+ruleset=🍎 Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/AppleTV/AppleTV.list
+ruleset=🍎 Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/AppleID/AppleID.list
 
-ruleset=🚀 Delay optimization,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ProxyLite/ProxyLite.list
+# 🎮 Steam
+ruleset=🎮 Steam,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Steam/Steam.list
+ruleset=🎮 Steam,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Epic/Epic.list
+ruleset=🎮 Steam,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/SteamCN/SteamCN.list
 
-ruleset=🔗 Global direct connection,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list
-ruleset=🔗 Global direct connection,[]GEOIP,CN
-ruleset=🐟 Final,[]FINAL
+# 🔍 Microsoft
+ruleset=🔍 Microsoft,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
+ruleset=🔍 Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Microsoft/Microsoft.list
+
+# 📹 YouTube
+ruleset=📹 YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/YouTube/YouTube.list
+
+# 🇭🇰 HongKong
+ruleset=🇭🇰 HongKong,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Netflix/Netflix.list
+
+# 🎬 BiliBili
+ruleset=🎬 BiliBili,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/BiliBiliIntl/BiliBiliIntl.list
+ruleset=🎬 BiliBili,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/BiliBili/BiliBili.list
+
+# 🛜 OpenAI
+ruleset=🛜 OpenAI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/OpenAI/OpenAI.list
+
+# 🇺🇸 America（泛用代理）
+ruleset=🇺🇸 America,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+ruleset=🇺🇸 America,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+ruleset=🇺🇸 America,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Proxy/Proxy.list
+
+# DIRECT（直连策略）
+ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaIPs/ChinaIPs.list
+ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Direct/Direct.list
+ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+
+# GEOIP CN
+ruleset=DIRECT,[]GEOIP,CN
+
+# 兜底
+ruleset=🇺🇸 America,[]FINAL
 
 
 # 这个比较全面
 custom_proxy_group=🌐 PROXY`select`[]🇺🇸 America`[]🇭🇰 HongKong`🇸🇬 Singapore`🇯🇵 Japan`🇹🇼 TaiWan
-custom_proxy_group=⚖️load-balance`load-balance`.*`http://www.gstatic.com/generate_204`300,,100
+custom_proxy_group=⚖️ Load Balance`load-balance`.*`http://www.gstatic.com/generate_204`300,,100
 custom_proxy_group=🚀 Delay optimization`url-test`.*`http://www.gstatic.com/generate_204`300,,100
 
-custom_proxy_group=🍎 Apple`select`[]🇺🇸 America`[]⚖️load-balance`[]DIRECT
+custom_proxy_group=🍎 Apple`select`[]🇺🇸 America`[]⚖️ load-balance`[]DIRECT
 custom_proxy_group=🎵 Spotify`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong
 custom_proxy_group=💬 Facebook`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong
 custom_proxy_group=Ⓜ️ Google`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong
-custom_proxy_group=📼 Youtube`select`[]⚖️load-balance`[]🚀 Delay optimization
-custom_proxy_group=✉️Microsoft`select`[]⚖️load-balance`[]DIRECT`[]🌐 PROXY
+custom_proxy_group=📼 Youtube`select`[]⚖️ load-balance`[]🚀 Delay optimization
+custom_proxy_group=✉️ Microsoft`select`[]⚖️ load-balance`[]DIRECT`[]🌐 PROXY
 custom_proxy_group=📽 Netflix`select`[]🇭🇰 HongKong`[]🇸🇬 Singapore`[]🇹🇼 TaiWan`[]🚀 Delay optimization
-custom_proxy_group=🤖 ChatGPT`select`[]🇯🇵 Japan`[]🇺🇸 America`[]🇸🇬 Singapore`[]🌐 PROXY`[]⚖️load-balance
+custom_proxy_group=🤖 ChatGPT`select`[]🇯🇵 Japan`[]🇺🇸 America`[]🇸🇬 Singapore`[]🌐 PROXY`[]⚖️ load-balance
 custom_proxy_group=🕹 Steam`select`[]🇭🇰 HongKong`[]DIRECT`[]🚀 Delay optimization`(游戏|GAME|Game)`[]🌐 PROXY
 custom_proxy_group=⚾️ Bilibili`select`[]🇭🇰 HongKong`[]🇹🇼 TaiWan`[]DIRECT`[]🚀 Delay optimization
 
