--- a/config.ini
+++ b/config.ini
@@ -277,14 +277,14 @@ custom_proxy_group=🌐 PROXY`select`[]🇺🇸 America`[]🇭🇰 HongKong`🇸
 custom_proxy_group=⚖️ Load Balance`load-balance`.*`http://www.gstatic.com/generate_204`300,,100
 custom_proxy_group=🚀 Delay optimization`url-test`.*`http://www.gstatic.com/generate_204`300,,100
 
-custom_proxy_group=🍎 Apple`select`[]🇺🇸 America`[]⚖️ load-balance`[]DIRECT
+custom_proxy_group=🍎 Apple`select`[]🇺🇸 America`[]⚖️ Load Balance`[]DIRECT
 custom_proxy_group=🎵 Spotify`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong
 custom_proxy_group=💬 Facebook`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong
 custom_proxy_group=Ⓜ️ Google`select`[]🇺🇸 America`[]🌐 PROXY`[]🇭🇰 HongKong
-custom_proxy_group=📼 Youtube`select`[]⚖️ load-balance`[]🚀 Delay optimization
-custom_proxy_group=✉️ Microsoft`select`[]⚖️ load-balance`[]DIRECT`[]🌐 PROXY
+custom_proxy_group=📼 Youtube`select`[]⚖️ Load Balance`[]🚀 Delay optimization
+custom_proxy_group=✉️ Microsoft`select`[]⚖️ Load Balance`[]DIRECT`[]🌐 PROXY
 custom_proxy_group=📽 Netflix`select`[]🇭🇰 HongKong`[]🇸🇬 Singapore`[]🇹🇼 TaiWan`[]🚀 Delay optimization
-custom_proxy_group=🤖 ChatGPT`select`[]🇯🇵 Japan`[]🇺🇸 America`[]🇸🇬 Singapore`[]🌐 PROXY`[]⚖️ load-balance
+custom_proxy_group=🤖 ChatGPT`select`[]🇯🇵 Japan`[]🇺🇸 America`[]🇸🇬 Singapore`[]🌐 PROXY`[]⚖️ Load Balance
 custom_proxy_group=🕹 Steam`select`[]🇭🇰 HongKong`[]DIRECT`[]🚀 Delay optimization`(游戏|GAME|Game)`[]🌐 PROXY
 custom_proxy_group=⚾️ Bilibili`select`[]🇭🇰 HongKong`[]🇹🇼 TaiWan`[]DIRECT`[]🚀 Delay optimization
 
