--- a/config.ini
+++ b/config.ini
@@ -233,11 +233,11 @@ ruleset=🍎 Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scrip
 # 🎮 Steam
 ruleset=🎮 Steam,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Steam/Steam.list
 ruleset=🎮 Steam,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Epic/Epic.list
-ruleset=🎮 Steam,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/SteamCN/SteamCN.list
+ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/SteamCN/SteamCN.list
 
-# 🔍 Microsoft
-ruleset=🔍 Microsoft,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
-ruleset=🔍 Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Microsoft/Microsoft.list
+# ✉️ Microsoft
+ruleset=✉️ Microsoft,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
+ruleset=✉️ Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Microsoft/Microsoft.list
 
 # 📹 YouTube
 ruleset=📹 YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/YouTube/YouTube.list
@@ -285,7 +285,7 @@ custom_proxy_group=📼 Youtube`select`[]⚖️ Load Balance`[]🚀 Delay optimi
 custom_proxy_group=✉️ Microsoft`select`[]⚖️ Load Balance`[]DIRECT`[]🌐 PROXY
 custom_proxy_group=📽 Netflix`select`[]🇭🇰 HongKong`[]🇸🇬 Singapore`[]🇹🇼 TaiWan`[]🚀 Delay optimization
 custom_proxy_group=🤖 ChatGPT`select`[]🇯🇵 Japan`[]🇺🇸 America`[]🇸🇬 Singapore`[]🌐 PROXY`[]⚖️ Load Balance
-custom_proxy_group=🕹 Steam`select`[]🇭🇰 HongKong`[]DIRECT`[]🚀 Delay optimization`(游戏|GAME|Game)`[]🌐 PROXY
+custom_proxy_group=🎮 Steam`select`[]🇭🇰 HongKong`[]DIRECT`[]🚀 Delay optimization`(游戏|GAME|Game)`[]🌐 PROXY
 custom_proxy_group=⚾️ Bilibili`select`[]🇭🇰 HongKong`[]🇹🇼 TaiWan`[]DIRECT`[]🚀 Delay optimization
 
 custom_proxy_group=🇭🇰 HongKong`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
