--- a/surge_conf.ini
+++ b/surge_conf.ini
@@ -240,7 +240,7 @@ ruleset=✉️ Microsoft,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/maste
 ruleset=✉️ Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Microsoft/Microsoft.list
 
 # 📹 YouTube
-ruleset=📹 YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/YouTube/YouTube.list
+ruleset=📼 Youtube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/YouTube/YouTube.list
 
 # 🇭🇰 HongKong
 ruleset=🇭🇰 HongKong,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Netflix/Netflix.list
@@ -286,7 +286,7 @@ custom_proxy_group=✉️ Microsoft`select`[]⚖️ Load Balance`[]DIRECT`[]🌐
 custom_proxy_group=📽 Netflix`select`[]🇭🇰 HongKong`[]🇸🇬 Singapore`[]🇹🇼 TaiWan`[]🚀 Delay optimization
 custom_proxy_group=🤖 ChatGPT`select`[]🇯🇵 Japan`[]🇺🇸 America`[]🇸🇬 Singapore`[]🌐 PROXY`[]⚖️ Load Balance
 custom_proxy_group=🎮 Steam`select`[]🇭🇰 HongKong`[]DIRECT`[]🚀 Delay optimization`(游戏|GAME|Game)`[]🌐 PROXY
-custom_proxy_group=⚾️ Bilibili`select`[]🇭🇰 HongKong`[]🇹🇼 TaiWan`[]DIRECT`[]🚀 Delay optimization
+custom_proxy_group=🎬 BiliBili`select`[]🇭🇰 HongKong`[]🇹🇼 TaiWan`[]DIRECT`[]🚀 Delay optimization
 
 custom_proxy_group=🇭🇰 HongKong`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 TaiWan`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
